RESOLVED FIXED258723
Bounds are not always correctly set when setting twice a MediaStream to a HTMLMediaElement
https://bugs.webkit.org/show_bug.cgi?id=258723
Summary Bounds are not always correctly set when setting twice a MediaStream to a HTM...
youenn fablet
Reported 2023-06-30 06:14:11 PDT
Attachments
youenn fablet
Comment 1 2023-06-30 06:24:18 PDT
EWS
Comment 2 2023-07-03 02:02:28 PDT
Committed 265708@main (38b13961316c): <https://commits.webkit.org/265708@main> Reviewed commits have been landed. Closing PR #15445 and removing active labels.
youenn fablet
Comment 3 2023-08-29 00:19:20 PDT
*** Bug 260787 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.